--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/Dance-Music-Arrangement.html">
+            <a class="portfolio-box" href="/mdblst/Dance-Music-Arrangement.html">
               <img class="img-fluid" src="content/Dance-Music-Arrangement-cover.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -152,7 +152,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/The-Pro-Sound.html">
+            <a class="portfolio-box" href="/mdblst/The-Pro-Sound.html">
               <img class="img-fluid" src="content/The Pro Sound Cover.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -164,7 +164,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/Key-Features-of-Modern-Electronic-Music-Subgenres.html">
+            <a class="portfolio-box" href="/mdblst/Key-Features-of-Modern-Electronic-Music-Subgenres.html">
               <img class="img-fluid" src="content/Key-Features-of-Modern-Electronic-Music-Subgenres-Cover.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -176,7 +176,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/Major & Minor Scales and their Chords.html">
+            <a class="portfolio-box" href="/mdblst/Major & Minor Scales and their Chords.html">
               <img class="img-fluid" src="content/Major & Minor Scales and their Chords cover.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -189,7 +189,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/Basic Drum Patterns.html">
+            <a class="portfolio-box" href="/mdblst/Basic Drum Patterns.html">
               <img class="img-fluid" src="content/Basic-Drum-Patterns-Cover.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -201,7 +201,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/Music Theory Basics.html">
+            <a class="portfolio-box" href="/mdblst/Music Theory Basics.html">
               <img class="img-fluid" src="content/music-theory-basics.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -215,7 +215,7 @@
           </div>
 
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/How to Prepare for a Live Performance.html">
+            <a class="portfolio-box" href="/mdblst/How to Prepare for a Live Performance.html">
               <img class="img-fluid" src="content/How to Prepare for a Live Performance Cover.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -229,7 +229,7 @@
           </div>
 
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/Sound synthesis introduction.html">
+            <a class="portfolio-box" href="/mdblst/Sound synthesis introduction.html">
               <img class="img-fluid" src="content/Sound synthesis introduction cover.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -243,7 +243,7 @@
           </div>
 
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="/Copyright Facts You Should Know.html">
+            <a class="portfolio-box" href="/mdblst/Copyright Facts You Should Know.html">
               <img class="img-fluid" src="content/Copyright Facts You Should Know cover.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
