--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="google-site-verification" content="2rzOExSughIPW9bpGIrl9xw14Sm4sCk3cwal7RsBtUw" />
 
     <title>Modeblast</title>
 
